# PowerFlow

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  _out1_.txt
.github/workflows/: automated_testing.yml
examples/: demo.m  demo.py  eigen_example.cc  example_network.txt  example_network_2.txt  example_network_disjunct.txt  example_network_single_grid.txt  grid.py  grid_basic.txt  jacobi_ybus.cpp  matlab_given_to_our_file.m  optdemo.m  optimering1.m  python_demo.py  python_interface.py  stort_natverk_17986 (2).txt  stort_natverk_17986.txt
examples/file_parsing/: example_data  file_parser.cc
examples/test_networks/: ReadMeTest.txt  double_connection.txt  double_edge.txt  edge_same_node.txt  empty_grid.txt  inner_connection.txt  invalid_PQ_grid_index.txt  invalid_PQ_node_index.txt  invalid_base_S.txt  invalid_base_V.txt  invalid_command.txt  invalid_command_network.txt  invalid_edge_child_index.txt  invalid_edge_impedance_index.txt  invalid_edge_parent_index.txt  invalid_end_of_list.txt  invalid_node_count_network.txt  invalid_node_index.txt  invalid_node_type.txt  invalid_node_type_in_connection.txt  invalid_node_type_in_connection_2.txt  invalid_slack_grid_index.txt  invalid_slack_node_index.txt  missing_connections.txt  missing_end_list_network.txt  missing_slack.txt  multiple_slack_nodes.txt  test_network.txt  test_network_cycle.txt  test_network_single_grid.txt  zero_impedance.txt
include/logger/: CppLogger.hpp  Logger.hpp  MatlabLogger.hpp
include/powerflow/: BackwardForwardSweepSolver.hpp  GaussSeidelSolver.hpp  GridAnalyzer.hpp  GridSolver.hpp  JacobiSolver.hpp  NetworkAnalyzer.hpp  NetworkLoader.hpp  NetworkLoaderError.hpp  NetworkValidator.hpp  PowerFlowSolver.hpp  SolverTypeEnum.hpp  network.hpp  powerflow.hpp  solverEnums.hpp
include/powerflow/logger/: CppLogger.hpp  Logger.hpp  MatlabLogger.hpp
include/powerflow/solvers/: BackwardForwardSweepSolver.hpp  GaussSeidelSolver.hpp  GridSolver.hpp  ZBusJacobiSolver.hpp
matlab/: CMakeLists.txt  MatlabLogger.hpp  PowerFlow.m  PowerFlowMex.cpp  matlab_mex.cpp
misc/: convert_matlab_given_to_our_file.m  generate_test_network.py
python/: CMakeLists.txt  PowerFlowPython.cpp  python_interface.py  python_wrappers.cpp  python_wrappers.hpp
src/: CMakeLists.txt  GridAnalyzer.cpp  NetworkAnalyzer.cpp  NetworkLoader.cpp  NetworkLoader.hpp  NetworkLoaderError.cpp  NetworkValidator.cpp  PowerFlowSolver.cpp  main.cpp  network.hpp  powerflow.cpp  solverEnums.cpp  temp_main.cpp
src/logger/: CppLogger.cpp  Logger.cpp
src/matlab/: matlab_wrappers.hpp
src/python/: python_wrappers.hpp
src/solvers/: BackwardForwardSweepSolver.cpp  GaussSeidelSolver.cpp  GridSolver.cpp  ZBusJacobiSolver.cpp  gauss_seidel.hpp  jacobi_ybus.hpp  solvers.hpp
standalone/: CMakeLists.txt  main.cpp
test2/tests/: main.cpp
tests/: CMakeLists.txt  main.cpp
