add_library(PowerFlowLib STATIC  NetworkLoader.cpp "GridAnalyzer.cpp" "PowerFlowSolver.cpp" "solvers/GaussSeidelSolver.cpp" "solvers/BackwardForwardSweepSolver.cpp" "solvers/ZBusJacobiSolver.cpp" "logger/Logger.cpp" "NetworkLoaderError.cpp" "NetworkValidator.cpp" "logger/CppLogger.cpp" "solvers/GridSolver.cpp")
if(CODE_COVERAGE)
    target_compile_options(PowerFlowLib PRIVATE -O0 -g --coverage -fprofile-arcs -ftest-coverage)
    target_link_options(PowerFlowLib PRIVATE --coverage)
endif()
target_include_directories(PowerFlowLib PUBLIC ${PROJECT_SOURCE_DIR}/include PUBLIC ${PROJECT_SOURCE_DIR}/lib)
